# qp-human-checkphrase

./: .gitignore  Cargo.toml  LICENSE  README.md  final_wordlist.txt  run_tests.sh
.github/workflows/: ci.yml  create-release-proposal.yml  create-release-tag-and-publish.yml
benches/: checksum_bench.rs
dart/: README.md  pubspec.yaml
dart/assets/: final_wordlist.txt
dart/lib/: human_checksum.dart
dart/lib/src/: human_checksum_base.dart
dart/test/: human_checksum_test.dart
js/: README.md  jest.config.js  jest.config.mjs  package-lock.json  package.json  tsconfig.json
js/src/: index.js  index.spec.js  index.spec.ts  index.ts  wordlist.json
scripts/: generate_test_vectors.py  sync_wordlists.py  words.py
src/: lib.rs
test-vectors/: checksums.json
wordlists/: build_wordlist.py  crypto_candidates.txt  crypto_candidates_2.txt  crypto_checksum_bip39_non_negative.txt  filter_afinn.py  positive.txt  positive_afinn.txt  positive_opinion_lexicon.txt
