[package]
edition = "2024"
name = "human-readable-checksum"
version = "0.1.0"

[dependencies]
hex = "0.4.3"
hmac = "0.12"
pbkdf2 = "0.12"
reqwest = { version = "0.12.12", features = ["blocking"] }
sha2 = "0.10"

[dev-dependencies]
criterion = "0.5"

[[bench]]
harness = false
name = "checksum_bench"
