[package]
authors = ["Quantus Network"]
categories = ["cryptography", "encoding"]
description = "Generate human-readable checksums from cryptocurrency addresses using BIP-39 words and PBKDF2 to prevent address poisoning attacks"
edition = "2021"
keywords = [
	"address",
	"bip39",
	"checksum",
	"quantus-network",
	"security",
]
license = "MIT"
name = "qp-human-checkphrase"
readme = "README.md"
repository = "https://github.com/quantus/qp-human-checkphrase"
version = "2.0.0"

[dependencies]
hex = "0.4.3"
hmac = "0.12"
pbkdf2 = "0.12"
reqwest = { version = "0.12.12", features = ["blocking"] }
sha2 = "0.10"

[dev-dependencies]
criterion = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bench]]
harness = false
name = "checksum_bench"
